--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -84,8 +84,8 @@ body {
 .reveal img,
 .reveal video,
 .reveal iframe {
-  max-width: 100%;
-  max-height: 100%; }
+  max-width: 95%;
+  max-height: 95%; }
 
 .reveal strong,
 .reveal b {
@@ -230,7 +230,7 @@ body {
  * IMAGES
  *********************************************/
 .reveal section img {
-  /*margin: 15px 0px;*/
+  margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #93a1a1;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
